fix(App): fixes transport controls overlapping the BrowseBy buttons

--- a/src/components/GuideTransport/styles.scss
+++ b/src/components/GuideTransport/styles.scss
@@ -8,6 +8,8 @@
   top: -7px;
   left: 0;
 
+  width: 200px;
+
   pointer-events: auto;
 
   span {
@@ -24,7 +26,7 @@
     margin-right: 8px;
 
     // text-align: right;
-    vertical-align: baseline;
+    // vertical-align: baseline;
     line-height: 24px;
     white-space: nowrap;
 
